GetProducts add filter by product_id
